fix to small menu button on small screens

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -252,16 +252,6 @@ div.clickable > .panel:hover {
   color: red;
 }
 
-.top-header .logo > a {
-  font-weight: 400;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  max-width: 80%;
-  float: left;
-  padding-left: 50px;
-}
-
 .top-nav img {
   display: block;
 }
